Add dev/ directory structure for isolated development work
- Created dev/ with subdirectories: docs, plans, scripts, reports
- Added build scripts for out-of-source builds in build/ directory
- Added basic test script for automated testing
- Updated .gitignore to exclude build/ and temporary report files
- Original project structure remains clean and untouched

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,12 @@ Makefile
 /stamp-h1
 /src/netperf
 /src/netserver
+
+# Build directory - all compiled artifacts go here
+/build/
+
+# Development reports and temporary analysis
+/dev/reports/*.html
+/dev/reports/*.pdf
+/dev/reports/*.csv
+/dev/reports/tmp/
