feat(build): Enable interval reporting (WANT_DEMO) by default
- Modified configure.ac to set use_demo=true by default
- Regenerated configure script via autogen.sh
- Enables interim results during test runs for better user experience
- Completes Phase 1 Task 1.3: Enable Interval Reporting by Default

Testing shows WANT_DEMO is now defined in config.h and interim results
are displayed during test execution.

--- a/configure.ac
+++ b/configure.ac
@@ -194,8 +194,8 @@ case "$enable_demo" in
 		use_demo=false
 		;;
 	'')
-		# whatever
-		use_demo=false
+		# default to enabled for better user experience
+		use_demo=true
 		;;
 	*)
 		AC_MSG_ERROR([--enable-demo takes yes or no])
